# MergeFox

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  NOTICE  README-ko.md  README.md  RELEASE.md  RELEASE_NOTES.md  SECURITY.md  TODO.md  build.rs  deny.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
TODO/: production.md
src/: actions.rs  app.rs  clone.rs  clone_auth.rs  config.rs  forge.rs  git_url.rs  gix_clone.rs  logging.rs  main.rs  preflight.rs  secrets.rs  workspace_profile.rs
src/ai/: change_signals.rs  client.rs  config.rs  diff_summarizer.rs  error.rs  grammars.rs  mod.rs  repo_conventions.rs  runtime.rs
src/ai/tasks/: commit_composer.rs  commit_message.rs  explain_change.rs  mod.rs  pr_conflict.rs  stash_message.rs
src/git/: basket_ops.rs  blame.rs  cli.rs  conflict_hunks.rs  diff.rs  find_fix_ops.rs  graph.rs  hunk_staging.rs  jobs.rs  lfs.rs  lfs_locks.rs  message_lint.rs  mod.rs  ops.rs  project_templates.rs  reflog_rewind.rs  repo.rs  reword_ops.rs  split_ops.rs
src/journal/: entry.rs  mod.rs  snapshot.rs
src/mcp/: action_preview.rs  activity_log.rs  forge.rs  git_tools.rs  mod.rs  server.rs  types.rs
src/providers/: azure.rs  bitbucket.rs  ci_status.rs  error.rs  generic.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  oauth.rs  pat.rs  runtime.rs  ssh.rs  types.rs
src/ui/: activity_log.rs  basket_focus.rs  basket_squash.rs  binary_conflict_view.rs  bisect.rs  blame.rs  chrome.rs  columns.rs  commit_basket.rs  commit_modal.rs  conflict_hunks_view.rs  conflicts.rs  diff_minimap.rs  diff_view.rs  file_preview.rs  find_fix.rs  fonts.rs  forge.rs  graph.rs  hud.rs  icon.rs  main_panel.rs  mod.rs  notifications.rs  open_with.rs  palette.rs  panic_recovery.rs  profile_rules.rs  project_tree.rs  prompt.rs  publish_remote.rs  rebase.rs  reflog.rs  reword.rs  shortcuts.rs  sidebar.rs  split_commit.rs  syntax.rs  tabs.rs  theme.rs  (+2 more)
src/ui/settings/: about.rs  ai.rs  general.rs  integrations.rs  mod.rs  repo.rs
wix/: main.wxs
